# AgentForge-Multi-Tool-Agent-with-MCP--NeMo-Guardrails---Audit-Logging

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  redteam.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_foundation.py  002_tool_and_llm_calls.py  003_approvals.py  004_audit_events.py  005_redteam.py  006_corpus.py  007_multi_agent.py  008_skills.py  009_reviews.py  010_triggers.py  011_observability.py
apps/api/src/agentforge/: auth.py  config.py  database.py  logging_setup.py  main.py
apps/api/src/agentforge/agents/: __init__.py  analyst.py  base.py  engineer.py  orchestrator.py  researcher.py  secretary.py  security_officer.py  specialists.py  supervisor_graph.py
apps/api/src/agentforge/guardrails/: __init__.py  injection.py  pii.py  runner.py  tool_allowlist.py
apps/api/src/agentforge/guardrails/config/: config.yml  prompts.yml  rails.co  tool_allowlist.yml
apps/api/src/agentforge/models/: __init__.py  agent_run.py  approval.py  audit_event.py  base.py  confidence_score.py  corpus.py  cost_record.py  llm_call.py  redteam.py  review_record.py  session.py  skill.py  task.py  task_step.py  tool_call.py  trigger.py
apps/api/src/agentforge/routers/: __init__.py  agents.py  approvals.py  audit.py  corpus.py  health.py  mcp.py  observability.py  redteam.py  sessions.py  skills.py  tasks.py  triggers.py
apps/api/src/agentforge/schemas/: __init__.py  agent.py  approval.py  audit.py  common.py  corpus.py  mcp.py  observability.py  redteam.py  session.py  skill.py  task.py  trigger.py
apps/api/src/agentforge/services/: agent_orchestrator.py  approval_service.py  audit_service.py  confidence_scorer.py  corpus_service.py  cost_tracker.py  llm_provider.py  mcp_client_pool.py  observability_service.py  redteam_service.py  replay_service.py  self_healing.py  skills_registry.py  task_event_bus.py  trigger_service.py
apps/api/src/agentforge/skills/: corporate_research.yml  customer_support.yml  repo_health.yml  workforce_analytics.yml
apps/api/src/agentforge/tools/: cli.py  generate_corpus.py  ingest_corpus.py  run_redteam.py  seed_synthetic_db.py
apps/api/tests/: conftest.py  test_agent_orchestrator.py  test_agents_roster.py  test_approvals.py  test_audit.py  test_audit_chain.py  test_confidence_gate.py  test_confidence_scorer.py  test_corpus.py  test_cost_tracker.py  test_guardrails_injection.py  test_guardrails_pii.py  test_guardrails_tool_allowlist.py  test_guardrails_topic.py  test_health.py  test_mcp_client_pool.py  test_orchestrator_hitl.py  test_replay.py  test_security_officer.py  test_self_healing.py  test_sessions.py  test_skills_registry.py  test_sse_compat.py  test_supervisor_graph.py  test_triggers.py
apps/api/tests/safety/: scenarios.json  scenarios_v2.json  test_redteam_suite.py  test_redteam_v2.py
apps/cli/: pyproject.toml
apps/cli/src/agentforge_cli/: __init__.py  main.py
apps/mcp_servers/file_search/: Dockerfile  pyproject.toml
apps/mcp_servers/file_search/src/file_search/: server.py
apps/mcp_servers/file_search/tests/: test_search.py
apps/mcp_servers/github/: Dockerfile  pyproject.toml
apps/mcp_servers/github/src/github_mcp/: server.py
apps/mcp_servers/github/tests/: test_github.py
apps/mcp_servers/sqlite_query/: Dockerfile  pyproject.toml
apps/mcp_servers/sqlite_query/src/sqlite_query/: server.py
apps/mcp_servers/sqlite_query/tests/: test_query.py
apps/mcp_servers/web_fetch/: Dockerfile  pyproject.toml
apps/mcp_servers/web_fetch/src/web_fetch/: server.py
apps/mcp_servers/web_fetch/tests/: test_fetch.py
apps/trigger_worker/: Dockerfile  pyproject.toml
apps/trigger_worker/src/trigger_worker/: server.py
apps/trigger_worker/src/trigger_worker/adapters/: generic_http.py  github.py  schedule.py
apps/trigger_worker/tests/: test_adapters.py
apps/ui/: Dockerfile  pyproject.toml
apps/ui/src/agentforge_ui/: __init__.py  api_client.py  app.py
apps/ui/src/agentforge_ui/pages/: 1_Run_Agent.py  2_Approvals.py  3_Audit_Log.py  4_Red_Team.py  5_AgentOps.py
apps/ui/tests/: test_imports.py
docs/: AGENTS.v2.md  DECISIONS.md  HANDOFF.md  PROGRESS.md  architecture.md  deployment.md  migration-v1-to-v2.md  verification.md
docs/phases/: phase-04-mcp-servers.md  phase-05-orchestrator.md  phase-06-guardrails.md  phase-07-hitl-approval.md  phase-08-redteam.md
fixtures/corpus/: 01-transformer-architectures-in-practice.md  02-retrieval-augmented-generation-design.md  03-vector-embeddings-and-semantic-search.md  04-prompt-injection-defense-patterns.md  05-human-in-the-loop-approval-systems.md  06-evaluation-metrics-for-agentic-systems.md  07-tool-calling-reliability-in-llm-agents.md  08-multi-agent-coordination-tradeoffs.md  09-fine-tuning-versus-in-context-learning.md  10-synthetic-data-for-enterprise-ai.md  11-knowledge-graphs-for-ai-assistants.md  12-observability-for-llm-applications.md  13-model-context-protocol-fundamentals.md  14-chain-of-thought-risk-management.md  15-latency-optimization-for-ai-apis.md  16-guardrails-for-sensitive-data.md  17-red-teaming-autonomous-workflows.md  18-enterprise-search-architecture.md  19-long-context-window-engineering.md  20-caching-strategies-for-ai-systems.md  21-model-routing-in-production.md  22-hybrid-search-and-ranking.md  23-responsible-ai-governance.md  24-feature-stores-for-ml-platforms.md  25-data-quality-monitoring-for-ml.md  26-drift-detection-in-production-models.md  27-a-b-testing-for-llm-features.md  28-knowledge-distillation-concepts.md  29-reinforcement-learning-from-feedback.md  30-open-source-foundation-models.md  31-agent-memory-design-patterns.md  32-graph-based-task-planning.md  33-incident-response-for-ai-services.md  34-security-review-for-mcp-tools.md  35-structured-output-validation.md  36-benchmarking-text-generation-systems.md  37-dataset-versioning-for-ml-teams.md  38-cost-controls-for-inference-platforms.md  39-access-control-in-ai-products.md  (+19 more)
(+6 files in other folders)
