[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentforge-ui"
version = "0.1.0"
description = "Streamlit operator UI for AgentForge"
readme = "../../README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "Mehul Upase" }]
urls = { repository = "https://github.com/Mehulupase01/AgentForge-Multi-Tool-Agent-with-MCP--NeMo-Guardrails---Audit-Logging" }
dependencies = [
  "streamlit==1.41.1",
  "httpx==0.28.1",
  "pandas==2.2.3",
  "plotly==5.24.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentforge_ui"]
