[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlite-query-mcp"
version = "0.1.0"
description = "AgentForge MCP SQLite query sidecar"
readme = "../../../README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [{ name = "Mehul Upase" }]
urls = { repository = "https://github.com/Mehulupase01/AgentForge-Multi-Tool-Agent-with-MCP--NeMo-Guardrails---Audit-Logging" }
dependencies = [
  "mcp==1.27.0",
  "pydantic==2.11.0",
  "structlog==24.4.0",
  "sqlparse==0.5.3",
]

[project.scripts]
sqlite-query-mcp = "sqlite_query.server:main"

[dependency-groups]
test = [
  "pytest==8.3.4",
  "anyio==4.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sqlite_query"]
