[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-fetch-mcp"
version = "0.1.0"
description = "AgentForge MCP web fetch sidecar"
requires-python = "==3.12.*"
dependencies = [
  "mcp==1.27.0",
  "pydantic==2.11.0",
  "structlog==24.4.0",
  "httpx==0.28.1",
]

[project.scripts]
web-fetch-mcp = "web_fetch.server:main"

[dependency-groups]
test = [
  "pytest==8.3.4",
  "anyio==4.7.0",
  "respx==0.21.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/web_fetch"]
